--- a/index.html
+++ b/index.html
@@ -4,8 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Michele Louden - Web Developer</title>
-  </head>
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.4.1/css/all.css">
   <body>
     <div class="parent">
       <div class="wrapper">  
@@ -14,7 +13,7 @@
             <div class="site-header">Michele Louden</div>
             <div class="site-subheader">Web Developer</div>
             <ul class="site-navigation">
-              <li><a href="index.html">Home</a></li>
+              <li><a href="index.html"><i class="fas fa-home"></i>Home</a></li>
             </ul>
           </div>
         </nav>
@@ -22,7 +21,8 @@
         <main>
           <div class="menu">
             <div class="menu-icon" id="sidebarCollapse">
-              <span class="mobile-header">Michele Louden: Web Developer</ span>
+              <i class="fas fa-bars"></i>
+              <span class="mobile-header">Michele Louden: Web Developer</span>
             </div>
           </div>
   
