--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   </head>
   <body>
     <div class="parent">
-      <div class="wrapper">  
+      <div class="wrapper">
         <nav>
           <div class="inner-wrap">
             <div class="site-header">Michele Louden</div>
@@ -20,6 +20,7 @@
               <li><a href="index.html"><i class="fas fa-home"></i> Home</a></li>
               <li><a href="about.html"><i class="fas fa-id-card"></i>About</a></li>
               <li><a href="contact.html"><i class="fas fa-comment-dots"></i>Contact</a></li>
+              <li><a href="portfolio.html"><i class="fas fa-gem"></i> Portfolio</a></li>
             </ul>
           </div>
         </nav>
@@ -44,7 +45,7 @@
               Cras ac odio viverra, semper est id, facilisis lectus.  Aliquam eget sollicitudin eros, at posuere lorem. Sed  consectetur libero elit, sit amet ultrices eros auctor   mollis. Praesent egestas blandit rutrum. Phasellus vel  pretium nulla. Donec ut varius sapien. In maximus tincidunt  lorem egestas eleifend. Vestibulum cursus ante eget urna   tempor, quis viverra mauris viverra. Ut nibh lorem, bibendum    in accumsan quis, ullamcorper sed tortor. Integer blandit   aliquam nibh in pulvinar. Curabitur a malesuada purus, at   scelerisque ligula. Morbi malesuada pellentesque neque, id  condimentum purus finibus eu.
             </p>
           </article>
-  
+
           <article>
             <h2>Welcome</h2>
             <hr />
